# projectX

./: .gitignore  CMakeLists.txt
resources/: wmn.glb
resources/shaders/: debug.gs.hlsl  debug.ps.hlsl  debug.vs.hlsl  test.ps.hlsl  test.vs.hlsl
src/: main.cpp  pch.h
src/core/: core.cpp  core.hpp  settings.hpp
src/core/thread/: thread_manager.cpp  thread_manager.hpp
src/core/utils/: exception.hpp  exception_macros.hpp  logger.hpp  stacktrace.hpp
src/core/window/: window.cpp  window.hpp
src/develop/: camera_controller.hpp
src/filesystem/gltf/: gltfConvert.cpp  gltfConvert.hpp  gltfLoader.cpp  gltfLoader.hpp
src/filesystem/textures/: textureLoader.cpp  textureLoader.hpp  textureT.hpp
src/render/: d3d11factory.cpp  d3d11factory.hpp  d3d11renderer.cpp  d3d11renderer.hpp  factory.cpp  factory.hpp  renderer.cpp  renderer.hpp
src/render/pipelines/: main_pipeline.cpp  main_pipeline.hpp  pipeline.cpp  pipeline.hpp  pipeline_debug.cpp  pipeline_debug.hpp
src/render/resources/: camera.hpp  constant.cpp  constant.hpp  d3d11camera.hpp  d3d11constant.cpp  d3d11constant.hpp  d3d11drawable.cpp  d3d11drawable.hpp  d3d11mesh.cpp  d3d11mesh.hpp  d3d11shader.cpp  d3d11shader.hpp  drawable.cpp  drawable.hpp  mesh.cpp  shader.cpp  shader.hpp  texture.cpp  texture.hpp
src/render/resources/drawable/: drawable.hpp  material.hpp  mesh.hpp  node.hpp  primitive.cpp  primitive.hpp  texture.cpp  transform.hpp  vertex.hpp
src/world/object/: drawable_wrapper.hpp  object.cpp  object.hpp  transform.hpp
